--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/code-new-roman-2');
+@import url('https://fonts.cdnfonts.com/css/code-new-roman-2');
 
 body {
   background-color: var(--page-bg);
